<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PageMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoutBtn"
        android:text="@string/sign_out"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/img2"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/textView13"
                android:layout_marginBottom="3dp"
                android:text="@string/full_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/textView15"
                android:layout_marginBottom="3dp"
                android:text="@string/email_address"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/textView16"
                android:layout_marginBottom="3dp"
                android:text="@string/nic_passport_number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/textView17"
                android:layout_marginBottom="3dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tap_the_list_to_book_the_bicycle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/ls1"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/rentBike"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:onClick="rent_bike"
            android:text="@string/rent_my_bicycle" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/rentBike2"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:onClick="book_bike"
            android:text="@string/rent_a_bicycle" />

    </LinearLayout>

</LinearLayout>