<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_title"
        android:text="@string/register_your_details"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:onClick="TakeImage"
        android:id="@+id/imageButton"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/fname_layout"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_fname"
                android:text="@string/full_name" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:id="@+id/ed_fname" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:id="@+id/email_layout" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email"
                android:text="@string/email_address" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/ed_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:id="@+id/password_layout" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_pass"
                android:text="@string/password" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/ed_pass"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:id="@+id/matric_layout" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_id"
                android:text="@string/nic_passport_number" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/ed_id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:id="@+id/course_layout" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:text="@string/phone_number" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/ed_phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:id="@+id/btn_layout" >

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                style="?android:attr/colorButtonNormal"
                android:id="@+id/register_btn"
                android:onClick="userRegister"
                android:text="@string/register"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/cancel_btn"
                style="?android:attr/colorButtonNormal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="CancelBtn"
                android:text="@string/cancel"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>